# tredoc

./: .env.example  .gitignore  README.md  pyproject.toml
notebooks/: example_config.yml  fine_tune_run_example.ipynb
src/dev_util/: dir.py  logging.py  weave_init.py
src/training/: train.py
tredoc_model_development/: .gitignore  pyproject.toml
tredoc_model_development/notebooks/: fine_tune_run_example.ipynb
tredoc_model_development/src/data/: scraper.py
tredoc_model_development/src/dev_util/: dir.py  logging.py
tredoc_model_development/src/training/: final_model_config.yml  run_final_model.py  train.py
tredoc_serving/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
tredoc_serving/app/: main.py
tredoc_serving/app/artifacts/model/: README.md  adapter_config.json
tredoc_serving/app/db/: db.py
tredoc_serving/app/models/: __init__.py
tredoc_serving/app/routers/: generate.py  health.py
tredoc_serving/app/util/: download.py  generate.py  in.txt
tredoc_serving/app/util/unsloth_compiled_cache/: UnslothBCOTrainer.py  UnslothGRPOTrainer.py  UnslothSFTTrainer.py
