[project]
name = "tredoc"
version = "0.1.0"
description = "LLM Generated Python Docstrings"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.6.0",
    "ipython>=9.11.0",
    "pandas>=2.3.3",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "wandb>=0.25.0",
]

[dependency-groups]
training = [
    "mlflow>=2.0",
    "datasets>=3.0",
    "accelerate>=1.0",
    "wandb>=0.25.0",
    "weave>=0.52.30",
]
serving = [
    "fastapi>=0.115",
    "uvicorn>=0.34",
]
dev = [
    "ruff>=0.9",
    "pytest>=8.0",
    "ipykernel",
]

[tool.ruff]
target-version = "py312"
line-length = 88
extend-exclude = ["src/training/train.py"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "N", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["tredoc"]
force-sort-within-sections = true

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]
"**/scripts/*" = ["ANN"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"
